# LoL-Player-Searcher

./: .gitignore  README.md  analyzer.py  app.py  main.py  requirements.txt  tokens.py
backend/: api.py  app.py  main.py
backend/app/: main.py
backend/app/routes/: player.py
backend/app/services/: analyzer.py  player.py  requester.py
backend/app/utils/: dict_generator.py  enviroment_variables.py  time_handler.py
backend/services/: Analyzer.py  Player.py  Requester.py
backend/utils/: EnviromentVariables.py  dict_generator.py  enviroment_variables.py  global_variables.py
backendv2/: .env-example  pyproject.toml
backendv2/src/: config.py  dependencies.py  main.py  utils.py
backendv2/src/schemas/: league.py  match.py  summoner.py
backendv2/src/services/: __init__.py  league_api.py
backendv2/src/summoner/: __init__.py  constants.py  router.py  summoner.py
services/: Analyzer.py  Player.py
utils/: CustomExceptions.py  DictGenerator.py  EnviromentVariables.py  GlobalVariables.py  TimeHandler.py  tokens.py
